ASN_MODULE_SOURCES=	\
	S1AP-PDU.c	\
	S1AP-InitiatingMessage.c	\
	S1AP-SuccessfulOutcome.c	\
	S1AP-UnsuccessfulOutcome.c	\
	E-RAB-IE-ContainerList.c	\
	S1AP-HandoverRequired.c	\
	S1AP-HandoverCommand.c	\
	S1AP-E-RABSubjecttoDataForwardingList.c	\
	S1AP-E-RABDataForwardingItem.c	\
	S1AP-HandoverPreparationFailure.c	\
	S1AP-HandoverRequest.c	\
	S1AP-E-RABToBeSetupListHOReq.c	\
	S1AP-E-RABToBeSetupItemHOReq.c	\
	S1AP-HandoverRequestAcknowledge.c	\
	S1AP-E-RABAdmittedList.c	\
	S1AP-E-RABAdmittedItem.c	\
	S1AP-E-RABFailedtoSetupListHOReqAck.c	\
	S1AP-E-RABFailedToSetupItemHOReqAck.c	\
	S1AP-HandoverFailure.c	\
	S1AP-HandoverNotify.c	\
	S1AP-PathSwitchRequest.c	\
	S1AP-E-RABToBeSwitchedDLList.c	\
	S1AP-E-RABToBeSwitchedDLItem.c	\
	S1AP-PathSwitchRequestAcknowledge.c	\
	S1AP-E-RABToBeSwitchedULList.c	\
	S1AP-E-RABToBeSwitchedULItem.c	\
	S1AP-PathSwitchRequestFailure.c	\
	S1AP-HandoverCancel.c	\
	S1AP-HandoverCancelAcknowledge.c	\
	S1AP-E-RABSetupRequest.c	\
	S1AP-E-RABToBeSetupListBearerSUReq.c	\
	S1AP-E-RABToBeSetupItemBearerSUReq.c	\
	S1AP-E-RABSetupResponse.c	\
	S1AP-E-RABSetupListBearerSURes.c	\
	S1AP-E-RABSetupItemBearerSURes.c	\
	S1AP-E-RABModifyRequest.c	\
	S1AP-E-RABToBeModifiedListBearerModReq.c	\
	S1AP-E-RABToBeModifiedItemBearerModReq.c	\
	S1AP-E-RABModifyResponse.c	\
	S1AP-E-RABModifyListBearerModRes.c	\
	S1AP-E-RABModifyItemBearerModRes.c	\
	S1AP-E-RABReleaseCommand.c	\
	S1AP-E-RABReleaseResponse.c	\
	S1AP-E-RABReleaseListBearerRelComp.c	\
	S1AP-E-RABReleaseItemBearerRelComp.c	\
	S1AP-E-RABReleaseIndication.c	\
	S1AP-InitialContextSetupRequest.c	\
	S1AP-E-RABToBeSetupListCtxtSUReq.c	\
	S1AP-E-RABToBeSetupItemCtxtSUReq.c	\
	S1AP-InitialContextSetupResponse.c	\
	S1AP-E-RABSetupListCtxtSURes.c	\
	S1AP-E-RABSetupItemCtxtSURes.c	\
	S1AP-InitialContextSetupFailure.c	\
	S1AP-Paging.c	\
	S1AP-TAIList.c	\
	S1AP-TAIItem.c	\
	S1AP-UEContextReleaseRequest.c	\
	S1AP-UEContextReleaseCommand.c	\
	S1AP-UEContextReleaseComplete.c	\
	S1AP-UEContextModificationRequest.c	\
	S1AP-UEContextModificationResponse.c	\
	S1AP-UEContextModificationFailure.c	\
	S1AP-DownlinkNASTransport.c	\
	S1AP-InitialUEMessage.c	\
	S1AP-UplinkNASTransport.c	\
	S1AP-NASNonDeliveryIndication.c	\
	S1AP-Reset.c	\
	S1AP-ResetType.c	\
	S1AP-ResetAll.c	\
	S1AP-UE-associatedLogicalS1-ConnectionListRes.c	\
	S1AP-ResetAcknowledge.c	\
	S1AP-UE-associatedLogicalS1-ConnectionListResAck.c	\
	S1AP-ErrorIndication.c	\
	S1AP-S1SetupRequest.c	\
	S1AP-S1SetupResponse.c	\
	S1AP-S1SetupFailure.c	\
	S1AP-ENBConfigurationUpdate.c	\
	S1AP-ENBConfigurationUpdateAcknowledge.c	\
	S1AP-ENBConfigurationUpdateFailure.c	\
	S1AP-MMEConfigurationUpdate.c	\
	S1AP-MMEConfigurationUpdateAcknowledge.c	\
	S1AP-MMEConfigurationUpdateFailure.c	\
	S1AP-DownlinkS1cdma2000tunneling.c	\
	S1AP-UplinkS1cdma2000tunneling.c	\
	S1AP-UECapabilityInfoIndication.c	\
	S1AP-ENBStatusTransfer.c	\
	S1AP-MMEStatusTransfer.c	\
	S1AP-TraceStart.c	\
	S1AP-TraceFailureIndication.c	\
	S1AP-DeactivateTrace.c	\
	S1AP-CellTrafficTrace.c	\
	S1AP-LocationReportingControl.c	\
	S1AP-LocationReportingFailureIndication.c	\
	S1AP-LocationReport.c	\
	S1AP-OverloadStart.c	\
	S1AP-OverloadStop.c	\
	S1AP-WriteReplaceWarningRequest.c	\
	S1AP-WriteReplaceWarningResponse.c	\
	S1AP-ENBDirectInformationTransfer.c	\
	S1AP-Inter-SystemInformationTransferType.c	\
	S1AP-MMEDirectInformationTransfer.c	\
	S1AP-ENBConfigurationTransfer.c	\
	S1AP-MMEConfigurationTransfer.c	\
	S1AP-PrivateMessage.c	\
	S1AP-KillRequest.c	\
	S1AP-KillResponse.c	\
	S1AP-DownlinkUEAssociatedLPPaTransport.c	\
	S1AP-UplinkUEAssociatedLPPaTransport.c	\
	S1AP-DownlinkNonUEAssociatedLPPaTransport.c	\
	S1AP-UplinkNonUEAssociatedLPPaTransport.c	\
	S1AP-AreaScopeOfMDT.c	\
	S1AP-AllocationAndRetentionPriority.c	\
	S1AP-Bearers-SubjectToStatusTransferList.c	\
	S1AP-Bearers-SubjectToStatusTransfer-Item.c	\
	S1AP-BitRate.c	\
	S1AP-BPLMNs.c	\
	S1AP-BroadcastCancelledAreaList.c	\
	S1AP-BroadcastCompletedAreaList.c	\
	S1AP-CancelledCellinEAI.c	\
	S1AP-CancelledCellinEAI-Item.c	\
	S1AP-CancelledCellinTAI.c	\
	S1AP-CancelledCellinTAI-Item.c	\
	S1AP-Cause.c	\
	S1AP-CauseMisc.c	\
	S1AP-CauseProtocol.c	\
	S1AP-CauseRadioNetwork.c	\
	S1AP-CauseTransport.c	\
	S1AP-CauseNas.c	\
	S1AP-CellAccessMode.c	\
	S1AP-CellIdentity.c	\
	S1AP-CellID-Broadcast.c	\
	S1AP-CellID-Broadcast-Item.c	\
	S1AP-CellID-Cancelled.c	\
	S1AP-CellID-Cancelled-Item.c	\
	S1AP-CellBasedMDT.c	\
	S1AP-CellIdListforMDT.c	\
	S1AP-Cdma2000PDU.c	\
	S1AP-Cdma2000RATType.c	\
	S1AP-Cdma2000SectorID.c	\
	S1AP-Cdma2000HOStatus.c	\
	S1AP-Cdma2000HORequiredIndication.c	\
	S1AP-Cdma2000OneXSRVCCInfo.c	\
	S1AP-Cdma2000OneXMEID.c	\
	S1AP-Cdma2000OneXMSI.c	\
	S1AP-Cdma2000OneXPilot.c	\
	S1AP-Cdma2000OneXRAND.c	\
	S1AP-Cell-Size.c	\
	S1AP-CellType.c	\
	S1AP-CGI.c	\
	S1AP-CI.c	\
	S1AP-CNDomain.c	\
	S1AP-ConcurrentWarningMessageIndicator.c	\
	S1AP-Correlation-ID.c	\
	S1AP-CSFallbackIndicator.c	\
	S1AP-CSG-Id.c	\
	S1AP-CSG-IdList.c	\
	S1AP-CSG-IdList-Item.c	\
	S1AP-CSGMembershipStatus.c	\
	S1AP-COUNTvalue.c	\
	S1AP-CriticalityDiagnostics.c	\
	S1AP-CriticalityDiagnostics-IE-List.c	\
	S1AP-CriticalityDiagnostics-IE-Item.c	\
	S1AP-DataCodingScheme.c	\
	S1AP-DL-Forwarding.c	\
	S1AP-Direct-Forwarding-Path-Availability.c	\
	S1AP-Data-Forwarding-Not-Possible.c	\
	S1AP-ECGIList.c	\
	S1AP-EmergencyAreaIDList.c	\
	S1AP-EmergencyAreaID.c	\
	S1AP-EmergencyAreaID-Broadcast.c	\
	S1AP-EmergencyAreaID-Broadcast-Item.c	\
	S1AP-EmergencyAreaID-Cancelled.c	\
	S1AP-EmergencyAreaID-Cancelled-Item.c	\
	S1AP-CompletedCellinEAI.c	\
	S1AP-CompletedCellinEAI-Item.c	\
	S1AP-ENB-ID.c	\
	S1AP-GERAN-Cell-ID.c	\
	S1AP-Global-ENB-ID.c	\
	S1AP-GUMMEIList.c	\
	S1AP-ENB-StatusTransfer-TransparentContainer.c	\
	S1AP-ENB-UE-S1AP-ID.c	\
	S1AP-ENBname.c	\
	S1AP-ENBX2TLAs.c	\
	S1AP-EncryptionAlgorithms.c	\
	S1AP-EPLMNs.c	\
	S1AP-EventType.c	\
	S1AP-E-RAB-ID.c	\
	S1AP-E-RABInformationList.c	\
	S1AP-E-RABInformationListItem.c	\
	S1AP-E-RABList.c	\
	S1AP-E-RABItem.c	\
	S1AP-E-RABLevelQoSParameters.c	\
	S1AP-EUTRAN-CGI.c	\
	S1AP-EUTRANRoundTripDelayEstimationInfo.c	\
	S1AP-ExtendedRNC-ID.c	\
	S1AP-ExtendedRepetitionPeriod.c	\
	S1AP-ForbiddenInterRATs.c	\
	S1AP-ForbiddenTAs.c	\
	S1AP-ForbiddenTAs-Item.c	\
	S1AP-ForbiddenTACs.c	\
	S1AP-ForbiddenLAs.c	\
	S1AP-ForbiddenLAs-Item.c	\
	S1AP-ForbiddenLACs.c	\
	S1AP-GBR-QosInformation.c	\
	S1AP-GTP-TEID.c	\
	S1AP-GUMMEI.c	\
	S1AP-GUMMEIType.c	\
	S1AP-GWContextReleaseIndication.c	\
	S1AP-HandoverRestrictionList.c	\
	S1AP-HandoverType.c	\
	S1AP-HFN.c	\
	S1AP-ImmediateMDT.c	\
	S1AP-IMSI.c	\
	S1AP-IntegrityProtectionAlgorithms.c	\
	S1AP-InterfacesToTrace.c	\
	S1AP-LAC.c	\
	S1AP-LAI.c	\
	S1AP-LastVisitedCell-Item.c	\
	S1AP-LastVisitedEUTRANCellInformation.c	\
	S1AP-LastVisitedUTRANCellInformation.c	\
	S1AP-LastVisitedGERANCellInformation.c	\
	S1AP-L3-Information.c	\
	S1AP-LPPa-PDU.c	\
	S1AP-LoggedMDT.c	\
	S1AP-LoggingInterval.c	\
	S1AP-LoggingDuration.c	\
	S1AP-MDT-Activation.c	\
	S1AP-MDT-Configuration.c	\
	S1AP-ManagementBasedMDTAllowed.c	\
	S1AP-PrivacyIndicator.c	\
	S1AP-MDTMode.c	\
	S1AP-MeasurementsToActivate.c	\
	S1AP-MeasurementThresholdA2.c	\
	S1AP-MessageIdentifier.c	\
	S1AP-MMEname.c	\
	S1AP-MMERelaySupportIndicator.c	\
	S1AP-MME-Group-ID.c	\
	S1AP-MME-Code.c	\
	S1AP-MME-UE-S1AP-ID.c	\
	S1AP-M-TMSI.c	\
	S1AP-MSClassmark2.c	\
	S1AP-MSClassmark3.c	\
	S1AP-NAS-PDU.c	\
	S1AP-NASSecurityParametersfromE-UTRAN.c	\
	S1AP-NASSecurityParameterstoE-UTRAN.c	\
	S1AP-NumberofBroadcastRequest.c	\
	S1AP-NumberOfBroadcasts.c	\
	S1AP-OldBSS-ToNewBSS-Information.c	\
	S1AP-OverloadAction.c	\
	S1AP-OverloadResponse.c	\
	S1AP-PagingDRX.c	\
	S1AP-PagingPriority.c	\
	S1AP-PDCP-SN.c	\
	S1AP-PeriodicReportingMDT.c	\
	S1AP-PLMNidentity.c	\
	S1AP-Pre-emptionCapability.c	\
	S1AP-Pre-emptionVulnerability.c	\
	S1AP-PriorityLevel.c	\
	S1AP-PS-ServiceNotAvailable.c	\
	S1AP-QCI.c	\
	S1AP-ReceiveStatusofULPDCPSDUs.c	\
	S1AP-RelativeMMECapacity.c	\
	S1AP-RelayNode-Indicator.c	\
	S1AP-RAC.c	\
	S1AP-ReportAmountMDT.c	\
	S1AP-ReportIntervalMDT.c	\
	S1AP-ReportingTriggerMDT.c	\
	S1AP-RequestType.c	\
	S1AP-RIMTransfer.c	\
	S1AP-RIMInformation.c	\
	S1AP-RIMRoutingAddress.c	\
	S1AP-ReportArea.c	\
	S1AP-RepetitionPeriod.c	\
	S1AP-RNC-ID.c	\
	S1AP-RRC-Container.c	\
	S1AP-RRC-Establishment-Cause.c	\
	S1AP-Routing-ID.c	\
	S1AP-SecurityKey.c	\
	S1AP-SecurityContext.c	\
	S1AP-SerialNumber.c	\
	S1AP-SONInformation.c	\
	S1AP-SONInformationRequest.c	\
	S1AP-SONInformationReply.c	\
	S1AP-SONConfigurationTransfer.c	\
	S1AP-Source-ToTarget-TransparentContainer.c	\
	S1AP-SourceBSS-ToTargetBSS-TransparentContainer.c	\
	S1AP-SourceeNB-ID.c	\
	S1AP-SRVCCOperationPossible.c	\
	S1AP-SRVCCHOIndication.c	\
	S1AP-SourceeNB-ToTargeteNB-TransparentContainer.c	\
	S1AP-SourceRNC-ToTargetRNC-TransparentContainer.c	\
	S1AP-ServedGUMMEIs.c	\
	S1AP-ServedGUMMEIsItem.c	\
	S1AP-ServedGroupIDs.c	\
	S1AP-ServedMMECs.c	\
	S1AP-ServedPLMNs.c	\
	S1AP-SubscriberProfileIDforRFP.c	\
	S1AP-SupportedTAs.c	\
	S1AP-SupportedTAs-Item.c	\
	S1AP-StratumLevel.c	\
	S1AP-SynchronizationStatus.c	\
	S1AP-TimeSynchronizationInfo.c	\
	S1AP-S-TMSI.c	\
	S1AP-TAC.c	\
	S1AP-TAIListforWarning.c	\
	S1AP-TAI.c	\
	S1AP-TAI-Broadcast.c	\
	S1AP-TAI-Broadcast-Item.c	\
	S1AP-TAI-Cancelled.c	\
	S1AP-TAI-Cancelled-Item.c	\
	S1AP-TABasedMDT.c	\
	S1AP-TAListforMDT.c	\
	S1AP-CompletedCellinTAI.c	\
	S1AP-CompletedCellinTAI-Item.c	\
	S1AP-TBCD-STRING.c	\
	S1AP-TargetID.c	\
	S1AP-TargeteNB-ID.c	\
	S1AP-TargetRNC-ID.c	\
	S1AP-TargeteNB-ToSourceeNB-TransparentContainer.c	\
	S1AP-Target-ToSource-TransparentContainer.c	\
	S1AP-TargetRNC-ToSourceRNC-TransparentContainer.c	\
	S1AP-TargetBSS-ToSourceBSS-TransparentContainer.c	\
	S1AP-ThresholdEventA2.c	\
	S1AP-Threshold-RSRP.c	\
	S1AP-Threshold-RSRQ.c	\
	S1AP-TimeToWait.c	\
	S1AP-Time-UE-StayedInCell.c	\
	S1AP-TransportLayerAddress.c	\
	S1AP-TraceActivation.c	\
	S1AP-TraceDepth.c	\
	S1AP-E-UTRAN-Trace-ID.c	\
	S1AP-TrafficLoadReductionIndication.c	\
	S1AP-TypeOfError.c	\
	S1AP-UEAggregateMaximumBitrate.c	\
	S1AP-UE-S1AP-IDs.c	\
	S1AP-UE-S1AP-ID-pair.c	\
	S1AP-UE-associatedLogicalS1-ConnectionItem.c	\
	S1AP-UEIdentityIndexValue.c	\
	S1AP-UE-HistoryInformation.c	\
	S1AP-UEPagingID.c	\
	S1AP-UERadioCapability.c	\
	S1AP-UESecurityCapabilities.c	\
	S1AP-WarningAreaList.c	\
	S1AP-WarningType.c	\
	S1AP-WarningSecurityInfo.c	\
	S1AP-WarningMessageContents.c	\
	S1AP-X2TNLConfigurationInfo.c	\
	S1AP-ENBX2ExtTLAs.c	\
	S1AP-ENBX2ExtTLA.c	\
	S1AP-ENBX2GTPTLAs.c	\
	S1AP-Criticality.c	\
	S1AP-Presence.c	\
	S1AP-PrivateIE-ID.c	\
	S1AP-ProcedureCode.c	\
	S1AP-ProtocolExtensionID.c	\
	S1AP-ProtocolIE-ID.c	\
	S1AP-TriggeringMessage.c	\
	ProtocolIE-Container.c	\
	ProtocolIE-SingleContainer.c	\
	ProtocolIE-Field.c	\
	ProtocolIE-ContainerList.c	\
	ProtocolExtensionContainer.c	\
	ProtocolExtensionField.c	\
	PrivateIE-Container.c	\
	PrivateIE-Field.c	\
	S1AP-IE.c

ASN_MODULE_INCLUDES=	\
	S1AP-PDU.h	\
	S1AP-InitiatingMessage.h	\
	S1AP-SuccessfulOutcome.h	\
	S1AP-UnsuccessfulOutcome.h	\
	E-RAB-IE-ContainerList.h	\
	E-RAB-IE-ContainerPairList.h	\
	ProtocolError-IE-ContainerList.h	\
	S1AP-HandoverRequired.h	\
	S1AP-HandoverCommand.h	\
	S1AP-E-RABSubjecttoDataForwardingList.h	\
	S1AP-E-RABDataForwardingItem.h	\
	S1AP-HandoverPreparationFailure.h	\
	S1AP-HandoverRequest.h	\
	S1AP-E-RABToBeSetupListHOReq.h	\
	S1AP-E-RABToBeSetupItemHOReq.h	\
	S1AP-HandoverRequestAcknowledge.h	\
	S1AP-E-RABAdmittedList.h	\
	S1AP-E-RABAdmittedItem.h	\
	S1AP-E-RABFailedtoSetupListHOReqAck.h	\
	S1AP-E-RABFailedToSetupItemHOReqAck.h	\
	S1AP-HandoverFailure.h	\
	S1AP-HandoverNotify.h	\
	S1AP-PathSwitchRequest.h	\
	S1AP-E-RABToBeSwitchedDLList.h	\
	S1AP-E-RABToBeSwitchedDLItem.h	\
	S1AP-PathSwitchRequestAcknowledge.h	\
	S1AP-E-RABToBeSwitchedULList.h	\
	S1AP-E-RABToBeSwitchedULItem.h	\
	S1AP-PathSwitchRequestFailure.h	\
	S1AP-HandoverCancel.h	\
	S1AP-HandoverCancelAcknowledge.h	\
	S1AP-E-RABSetupRequest.h	\
	S1AP-E-RABToBeSetupListBearerSUReq.h	\
	S1AP-E-RABToBeSetupItemBearerSUReq.h	\
	S1AP-E-RABSetupResponse.h	\
	S1AP-E-RABSetupListBearerSURes.h	\
	S1AP-E-RABSetupItemBearerSURes.h	\
	S1AP-E-RABModifyRequest.h	\
	S1AP-E-RABToBeModifiedListBearerModReq.h	\
	S1AP-E-RABToBeModifiedItemBearerModReq.h	\
	S1AP-E-RABModifyResponse.h	\
	S1AP-E-RABModifyListBearerModRes.h	\
	S1AP-E-RABModifyItemBearerModRes.h	\
	S1AP-E-RABReleaseCommand.h	\
	S1AP-E-RABReleaseResponse.h	\
	S1AP-E-RABReleaseListBearerRelComp.h	\
	S1AP-E-RABReleaseItemBearerRelComp.h	\
	S1AP-E-RABReleaseIndication.h	\
	S1AP-InitialContextSetupRequest.h	\
	S1AP-E-RABToBeSetupListCtxtSUReq.h	\
	S1AP-E-RABToBeSetupItemCtxtSUReq.h	\
	S1AP-InitialContextSetupResponse.h	\
	S1AP-E-RABSetupListCtxtSURes.h	\
	S1AP-E-RABSetupItemCtxtSURes.h	\
	S1AP-InitialContextSetupFailure.h	\
	S1AP-Paging.h	\
	S1AP-TAIList.h	\
	S1AP-TAIItem.h	\
	S1AP-UEContextReleaseRequest.h	\
	S1AP-UEContextReleaseCommand.h	\
	S1AP-UEContextReleaseComplete.h	\
	S1AP-UEContextModificationRequest.h	\
	S1AP-UEContextModificationResponse.h	\
	S1AP-UEContextModificationFailure.h	\
	S1AP-DownlinkNASTransport.h	\
	S1AP-InitialUEMessage.h	\
	S1AP-UplinkNASTransport.h	\
	S1AP-NASNonDeliveryIndication.h	\
	S1AP-Reset.h	\
	S1AP-ResetType.h	\
	S1AP-ResetAll.h	\
	S1AP-UE-associatedLogicalS1-ConnectionListRes.h	\
	S1AP-ResetAcknowledge.h	\
	S1AP-UE-associatedLogicalS1-ConnectionListResAck.h	\
	S1AP-ErrorIndication.h	\
	S1AP-S1SetupRequest.h	\
	S1AP-S1SetupResponse.h	\
	S1AP-S1SetupFailure.h	\
	S1AP-ENBConfigurationUpdate.h	\
	S1AP-ENBConfigurationUpdateAcknowledge.h	\
	S1AP-ENBConfigurationUpdateFailure.h	\
	S1AP-MMEConfigurationUpdate.h	\
	S1AP-MMEConfigurationUpdateAcknowledge.h	\
	S1AP-MMEConfigurationUpdateFailure.h	\
	S1AP-DownlinkS1cdma2000tunneling.h	\
	S1AP-UplinkS1cdma2000tunneling.h	\
	S1AP-UECapabilityInfoIndication.h	\
	S1AP-ENBStatusTransfer.h	\
	S1AP-MMEStatusTransfer.h	\
	S1AP-TraceStart.h	\
	S1AP-TraceFailureIndication.h	\
	S1AP-DeactivateTrace.h	\
	S1AP-CellTrafficTrace.h	\
	S1AP-LocationReportingControl.h	\
	S1AP-LocationReportingFailureIndication.h	\
	S1AP-LocationReport.h	\
	S1AP-OverloadStart.h	\
	S1AP-OverloadStop.h	\
	S1AP-WriteReplaceWarningRequest.h	\
	S1AP-WriteReplaceWarningResponse.h	\
	S1AP-ENBDirectInformationTransfer.h	\
	S1AP-Inter-SystemInformationTransferType.h	\
	S1AP-MMEDirectInformationTransfer.h	\
	S1AP-ENBConfigurationTransfer.h	\
	S1AP-MMEConfigurationTransfer.h	\
	S1AP-PrivateMessage.h	\
	S1AP-KillRequest.h	\
	S1AP-KillResponse.h	\
	S1AP-DownlinkUEAssociatedLPPaTransport.h	\
	S1AP-UplinkUEAssociatedLPPaTransport.h	\
	S1AP-DownlinkNonUEAssociatedLPPaTransport.h	\
	S1AP-UplinkNonUEAssociatedLPPaTransport.h	\
	S1AP-AreaScopeOfMDT.h	\
	S1AP-AllocationAndRetentionPriority.h	\
	S1AP-Bearers-SubjectToStatusTransferList.h	\
	S1AP-Bearers-SubjectToStatusTransfer-Item.h	\
	S1AP-BitRate.h	\
	S1AP-BPLMNs.h	\
	S1AP-BroadcastCancelledAreaList.h	\
	S1AP-BroadcastCompletedAreaList.h	\
	S1AP-CancelledCellinEAI.h	\
	S1AP-CancelledCellinEAI-Item.h	\
	S1AP-CancelledCellinTAI.h	\
	S1AP-CancelledCellinTAI-Item.h	\
	S1AP-Cause.h	\
	S1AP-CauseMisc.h	\
	S1AP-CauseProtocol.h	\
	S1AP-CauseRadioNetwork.h	\
	S1AP-CauseTransport.h	\
	S1AP-CauseNas.h	\
	S1AP-CellAccessMode.h	\
	S1AP-CellIdentity.h	\
	S1AP-CellID-Broadcast.h	\
	S1AP-CellID-Broadcast-Item.h	\
	S1AP-CellID-Cancelled.h	\
	S1AP-CellID-Cancelled-Item.h	\
	S1AP-CellBasedMDT.h	\
	S1AP-CellIdListforMDT.h	\
	S1AP-Cdma2000PDU.h	\
	S1AP-Cdma2000RATType.h	\
	S1AP-Cdma2000SectorID.h	\
	S1AP-Cdma2000HOStatus.h	\
	S1AP-Cdma2000HORequiredIndication.h	\
	S1AP-Cdma2000OneXSRVCCInfo.h	\
	S1AP-Cdma2000OneXMEID.h	\
	S1AP-Cdma2000OneXMSI.h	\
	S1AP-Cdma2000OneXPilot.h	\
	S1AP-Cdma2000OneXRAND.h	\
	S1AP-Cell-Size.h	\
	S1AP-CellType.h	\
	S1AP-CGI.h	\
	S1AP-CI.h	\
	S1AP-CNDomain.h	\
	S1AP-ConcurrentWarningMessageIndicator.h	\
	S1AP-Correlation-ID.h	\
	S1AP-CSFallbackIndicator.h	\
	S1AP-CSG-Id.h	\
	S1AP-CSG-IdList.h	\
	S1AP-CSG-IdList-Item.h	\
	S1AP-CSGMembershipStatus.h	\
	S1AP-COUNTvalue.h	\
	S1AP-CriticalityDiagnostics.h	\
	S1AP-CriticalityDiagnostics-IE-List.h	\
	S1AP-CriticalityDiagnostics-IE-Item.h	\
	S1AP-DataCodingScheme.h	\
	S1AP-DL-Forwarding.h	\
	S1AP-Direct-Forwarding-Path-Availability.h	\
	S1AP-Data-Forwarding-Not-Possible.h	\
	S1AP-ECGIList.h	\
	S1AP-EmergencyAreaIDList.h	\
	S1AP-EmergencyAreaID.h	\
	S1AP-EmergencyAreaID-Broadcast.h	\
	S1AP-EmergencyAreaID-Broadcast-Item.h	\
	S1AP-EmergencyAreaID-Cancelled.h	\
	S1AP-EmergencyAreaID-Cancelled-Item.h	\
	S1AP-CompletedCellinEAI.h	\
	S1AP-CompletedCellinEAI-Item.h	\
	S1AP-ENB-ID.h	\
	S1AP-GERAN-Cell-ID.h	\
	S1AP-Global-ENB-ID.h	\
	S1AP-GUMMEIList.h	\
	S1AP-ENB-StatusTransfer-TransparentContainer.h	\
	S1AP-ENB-UE-S1AP-ID.h	\
	S1AP-ENBname.h	\
	S1AP-ENBX2TLAs.h	\
	S1AP-EncryptionAlgorithms.h	\
	S1AP-EPLMNs.h	\
	S1AP-EventType.h	\
	S1AP-E-RAB-ID.h	\
	S1AP-E-RABInformationList.h	\
	S1AP-E-RABInformationListItem.h	\
	S1AP-E-RABList.h	\
	S1AP-E-RABItem.h	\
	S1AP-E-RABLevelQoSParameters.h	\
	S1AP-EUTRAN-CGI.h	\
	S1AP-EUTRANRoundTripDelayEstimationInfo.h	\
	S1AP-ExtendedRNC-ID.h	\
	S1AP-ExtendedRepetitionPeriod.h	\
	S1AP-ForbiddenInterRATs.h	\
	S1AP-ForbiddenTAs.h	\
	S1AP-ForbiddenTAs-Item.h	\
	S1AP-ForbiddenTACs.h	\
	S1AP-ForbiddenLAs.h	\
	S1AP-ForbiddenLAs-Item.h	\
	S1AP-ForbiddenLACs.h	\
	S1AP-GBR-QosInformation.h	\
	S1AP-GTP-TEID.h	\
	S1AP-GUMMEI.h	\
	S1AP-GUMMEIType.h	\
	S1AP-GWContextReleaseIndication.h	\
	S1AP-HandoverRestrictionList.h	\
	S1AP-HandoverType.h	\
	S1AP-HFN.h	\
	S1AP-ImmediateMDT.h	\
	S1AP-IMSI.h	\
	S1AP-IntegrityProtectionAlgorithms.h	\
	S1AP-InterfacesToTrace.h	\
	S1AP-LAC.h	\
	S1AP-LAI.h	\
	S1AP-LastVisitedCell-Item.h	\
	S1AP-LastVisitedEUTRANCellInformation.h	\
	S1AP-LastVisitedUTRANCellInformation.h	\
	S1AP-LastVisitedGERANCellInformation.h	\
	S1AP-L3-Information.h	\
	S1AP-LPPa-PDU.h	\
	S1AP-LoggedMDT.h	\
	S1AP-LoggingInterval.h	\
	S1AP-LoggingDuration.h	\
	S1AP-MDT-Activation.h	\
	S1AP-MDT-Configuration.h	\
	S1AP-ManagementBasedMDTAllowed.h	\
	S1AP-PrivacyIndicator.h	\
	S1AP-MDTMode.h	\
	S1AP-MeasurementsToActivate.h	\
	S1AP-MeasurementThresholdA2.h	\
	S1AP-MessageIdentifier.h	\
	S1AP-MMEname.h	\
	S1AP-MMERelaySupportIndicator.h	\
	S1AP-MME-Group-ID.h	\
	S1AP-MME-Code.h	\
	S1AP-MME-UE-S1AP-ID.h	\
	S1AP-M-TMSI.h	\
	S1AP-MSClassmark2.h	\
	S1AP-MSClassmark3.h	\
	S1AP-NAS-PDU.h	\
	S1AP-NASSecurityParametersfromE-UTRAN.h	\
	S1AP-NASSecurityParameterstoE-UTRAN.h	\
	S1AP-NumberofBroadcastRequest.h	\
	S1AP-NumberOfBroadcasts.h	\
	S1AP-OldBSS-ToNewBSS-Information.h	\
	S1AP-OverloadAction.h	\
	S1AP-OverloadResponse.h	\
	S1AP-PagingDRX.h	\
	S1AP-PagingPriority.h	\
	S1AP-PDCP-SN.h	\
	S1AP-PeriodicReportingMDT.h	\
	S1AP-PLMNidentity.h	\
	S1AP-Pre-emptionCapability.h	\
	S1AP-Pre-emptionVulnerability.h	\
	S1AP-PriorityLevel.h	\
	S1AP-PS-ServiceNotAvailable.h	\
	S1AP-QCI.h	\
	S1AP-ReceiveStatusofULPDCPSDUs.h	\
	S1AP-RelativeMMECapacity.h	\
	S1AP-RelayNode-Indicator.h	\
	S1AP-RAC.h	\
	S1AP-ReportAmountMDT.h	\
	S1AP-ReportIntervalMDT.h	\
	S1AP-ReportingTriggerMDT.h	\
	S1AP-RequestType.h	\
	S1AP-RIMTransfer.h	\
	S1AP-RIMInformation.h	\
	S1AP-RIMRoutingAddress.h	\
	S1AP-ReportArea.h	\
	S1AP-RepetitionPeriod.h	\
	S1AP-RNC-ID.h	\
	S1AP-RRC-Container.h	\
	S1AP-RRC-Establishment-Cause.h	\
	S1AP-Routing-ID.h	\
	S1AP-SecurityKey.h	\
	S1AP-SecurityContext.h	\
	S1AP-SerialNumber.h	\
	S1AP-SONInformation.h	\
	S1AP-SONInformationRequest.h	\
	S1AP-SONInformationReply.h	\
	S1AP-SONConfigurationTransfer.h	\
	S1AP-Source-ToTarget-TransparentContainer.h	\
	S1AP-SourceBSS-ToTargetBSS-TransparentContainer.h	\
	S1AP-SourceeNB-ID.h	\
	S1AP-SRVCCOperationPossible.h	\
	S1AP-SRVCCHOIndication.h	\
	S1AP-SourceeNB-ToTargeteNB-TransparentContainer.h	\
	S1AP-SourceRNC-ToTargetRNC-TransparentContainer.h	\
	S1AP-ServedGUMMEIs.h	\
	S1AP-ServedGUMMEIsItem.h	\
	S1AP-ServedGroupIDs.h	\
	S1AP-ServedMMECs.h	\
	S1AP-ServedPLMNs.h	\
	S1AP-SubscriberProfileIDforRFP.h	\
	S1AP-SupportedTAs.h	\
	S1AP-SupportedTAs-Item.h	\
	S1AP-StratumLevel.h	\
	S1AP-SynchronizationStatus.h	\
	S1AP-TimeSynchronizationInfo.h	\
	S1AP-S-TMSI.h	\
	S1AP-TAC.h	\
	S1AP-TAIListforWarning.h	\
	S1AP-TAI.h	\
	S1AP-TAI-Broadcast.h	\
	S1AP-TAI-Broadcast-Item.h	\
	S1AP-TAI-Cancelled.h	\
	S1AP-TAI-Cancelled-Item.h	\
	S1AP-TABasedMDT.h	\
	S1AP-TAListforMDT.h	\
	S1AP-CompletedCellinTAI.h	\
	S1AP-CompletedCellinTAI-Item.h	\
	S1AP-TBCD-STRING.h	\
	S1AP-TargetID.h	\
	S1AP-TargeteNB-ID.h	\
	S1AP-TargetRNC-ID.h	\
	S1AP-TargeteNB-ToSourceeNB-TransparentContainer.h	\
	S1AP-Target-ToSource-TransparentContainer.h	\
	S1AP-TargetRNC-ToSourceRNC-TransparentContainer.h	\
	S1AP-TargetBSS-ToSourceBSS-TransparentContainer.h	\
	S1AP-ThresholdEventA2.h	\
	S1AP-Threshold-RSRP.h	\
	S1AP-Threshold-RSRQ.h	\
	S1AP-TimeToWait.h	\
	S1AP-Time-UE-StayedInCell.h	\
	S1AP-TransportLayerAddress.h	\
	S1AP-TraceActivation.h	\
	S1AP-TraceDepth.h	\
	S1AP-E-UTRAN-Trace-ID.h	\
	S1AP-TrafficLoadReductionIndication.h	\
	S1AP-TypeOfError.h	\
	S1AP-UEAggregateMaximumBitrate.h	\
	S1AP-UE-S1AP-IDs.h	\
	S1AP-UE-S1AP-ID-pair.h	\
	S1AP-UE-associatedLogicalS1-ConnectionItem.h	\
	S1AP-UEIdentityIndexValue.h	\
	S1AP-UE-HistoryInformation.h	\
	S1AP-UEPagingID.h	\
	S1AP-UERadioCapability.h	\
	S1AP-UESecurityCapabilities.h	\
	S1AP-WarningAreaList.h	\
	S1AP-WarningType.h	\
	S1AP-WarningSecurityInfo.h	\
	S1AP-WarningMessageContents.h	\
	S1AP-X2TNLConfigurationInfo.h	\
	S1AP-ENBX2ExtTLAs.h	\
	S1AP-ENBX2ExtTLA.h	\
	S1AP-ENBX2GTPTLAs.h	\
	S1AP-Criticality.h	\
	S1AP-Presence.h	\
	S1AP-PrivateIE-ID.h	\
	S1AP-ProcedureCode.h	\
	S1AP-ProtocolExtensionID.h	\
	S1AP-ProtocolIE-ID.h	\
	S1AP-TriggeringMessage.h	\
	ProtocolIE-Container.h	\
	ProtocolIE-SingleContainer.h	\
	ProtocolIE-Field.h	\
	ProtocolIE-ContainerPair.h	\
	ProtocolIE-FieldPair.h	\
	ProtocolIE-ContainerList.h	\
	ProtocolIE-ContainerPairList.h	\
	ProtocolExtensionContainer.h	\
	ProtocolExtensionField.h	\
	PrivateIE-Container.h	\
	PrivateIE-Field.h	\
	S1AP-IE.h

ASN_MODULE_INCLUDES+=ANY.h
ASN_MODULE_SOURCES+=ANY.c
ASN_MODULE_INCLUDES+=BOOLEAN.h
ASN_MODULE_SOURCES+=BOOLEAN.c
ASN_MODULE_INCLUDES+=INTEGER.h
ASN_MODULE_INCLUDES+=NativeEnumerated.h
ASN_MODULE_SOURCES+=INTEGER.c
ASN_MODULE_INCLUDES+=NULL.h
ASN_MODULE_SOURCES+=NULL.c
ASN_MODULE_SOURCES+=NativeEnumerated.c
ASN_MODULE_INCLUDES+=NativeInteger.h
ASN_MODULE_SOURCES+=NativeInteger.c
ASN_MODULE_INCLUDES+=OBJECT_IDENTIFIER.h
ASN_MODULE_SOURCES+=OBJECT_IDENTIFIER.c
ASN_MODULE_INCLUDES+=PrintableString.h
ASN_MODULE_SOURCES+=PrintableString.c
ASN_MODULE_INCLUDES+=asn_SEQUENCE_OF.h
ASN_MODULE_SOURCES+=asn_SEQUENCE_OF.c
ASN_MODULE_INCLUDES+=asn_SET_OF.h
ASN_MODULE_SOURCES+=asn_SET_OF.c
ASN_MODULE_INCLUDES+=constr_CHOICE.h
ASN_MODULE_SOURCES+=constr_CHOICE.c
ASN_MODULE_INCLUDES+=constr_SEQUENCE.h
ASN_MODULE_SOURCES+=constr_SEQUENCE.c
ASN_MODULE_INCLUDES+=constr_SEQUENCE_OF.h
ASN_MODULE_SOURCES+=constr_SEQUENCE_OF.c
ASN_MODULE_INCLUDES+=constr_SET_OF.h
ASN_MODULE_SOURCES+=constr_SET_OF.c
ASN_MODULE_INCLUDES+=asn_application.h
ASN_MODULE_INCLUDES+=asn_system.h
ASN_MODULE_INCLUDES+=asn_codecs.h
ASN_MODULE_INCLUDES+=asn_internal.h
ASN_MODULE_INCLUDES+=OCTET_STRING.h
ASN_MODULE_SOURCES+=OCTET_STRING.c
ASN_MODULE_INCLUDES+=BIT_STRING.h
ASN_MODULE_SOURCES+=BIT_STRING.c
ASN_MODULE_SOURCES+=asn_codecs_prim.c
ASN_MODULE_INCLUDES+=asn_codecs_prim.h
ASN_MODULE_INCLUDES+=ber_tlv_length.h
ASN_MODULE_SOURCES+=ber_tlv_length.c
ASN_MODULE_INCLUDES+=ber_tlv_tag.h
ASN_MODULE_SOURCES+=ber_tlv_tag.c
ASN_MODULE_INCLUDES+=ber_decoder.h
ASN_MODULE_SOURCES+=ber_decoder.c
ASN_MODULE_INCLUDES+=der_encoder.h
ASN_MODULE_SOURCES+=der_encoder.c
ASN_MODULE_INCLUDES+=constr_TYPE.h
ASN_MODULE_SOURCES+=constr_TYPE.c
ASN_MODULE_INCLUDES+=constraints.h
ASN_MODULE_SOURCES+=constraints.c
ASN_MODULE_INCLUDES+=xer_support.h
ASN_MODULE_SOURCES+=xer_support.c
ASN_MODULE_INCLUDES+=xer_decoder.h
ASN_MODULE_SOURCES+=xer_decoder.c
ASN_MODULE_INCLUDES+=xer_encoder.h
ASN_MODULE_SOURCES+=xer_encoder.c
ASN_MODULE_INCLUDES+=per_support.h
ASN_MODULE_SOURCES+=per_support.c
ASN_MODULE_INCLUDES+=per_decoder.h
ASN_MODULE_SOURCES+=per_decoder.c
ASN_MODULE_INCLUDES+=per_encoder.h
ASN_MODULE_SOURCES+=per_encoder.c
ASN_MODULE_INCLUDES+=per_opentype.h
ASN_MODULE_SOURCES+=per_opentype.c

pkglib_LTLIBRARIES=libs1apasn1c.la
libs1apasn1c_la_SOURCES=$(ASN_MODULE_INCLUDES) $(ASN_MODULE_SOURCES)

libs1apasn1c_la_DEPENDENCIES = \
    $(top_srcdir)/lib/core/src/libcore.la

libs1apasn1c_la_LIBADD = \
    $(top_srcdir)/lib/core/src/libcore.la

AM_LDFLAGS = \
	-version-info @LIBVERSION@

AM_CPPFLAGS = \
    -I$(top_srcdir)/lib/core/include

AM_CFLAGS = \
	-Wall -Werror -Wno-parentheses-equality

MAINTAINERCLEANFILES = Makefile.in 
MOSTLYCLEANFILES = core *.stackdump Makefile.am.sample converter-sample.c

regen: regenerate-from-asn1-source

regenerate-from-asn1-source:
	../../../../AuthenticEshkinKot/asn1c/asn1c/asn1c -fcompound-names -gen-PER ../support/S1AP-PDU.asn

